--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   <p>If the app is installed, it should open automatically. Otherwise, you can download it.</p>
 
   <button id="openApp">Open App</button>
-  <a href="https://example.com/path-to-your-apk.apk" download>
+  <a href="https://expo.dev/accounts/mttkshie/projects/StorkNeeds/builds/8cc8628e-978e-4a43-9e12-db5dd98ab022" download>
     <button>Download APK</button>
   </a>
 
